# OSG_QT_CMAKE_OCC

./: CMakeLists.txt  README.md
src/: QTTEST.cpp  QTTEST.h  QTTEST.qrc  QTTEST.ui  main.cpp
thirdpart/tbb_2021.5-vc14-64/lib/: tbb.lib  tbb12_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib
